--- a/client/src/widgets/toolbar/ui/Toolbar.module.scss
+++ b/client/src/widgets/toolbar/ui/Toolbar.module.scss
@@ -2,13 +2,13 @@
   background-color: rgb(18, 18, 18);
   position: sticky;
   top: 0px;
+  z-index: 10;
 
   @media (min-width: 1024px) {
     height: 100px;
   }
 
   .toolbar {
-    //@apply sticky top-0 w-full h-[6.25rem] bg-black-primary flex justify-center z-50;
     margin-left: auto;
     margin-right: auto;
     width: 75%;
